# SLP-Assginment4

./: README.md  download_dataset.py  eval.py  main.py  pyproject.toml  run.sh
metrics/: logmel.py  utmos.py  wer.py
results/: ljspeech_results.csv  vctk_results.csv
