[project]
name = "slp-assignment4"
version = "0.1.0"
description = "RVQ-based NAC analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "descript-audio-codec",
    "transformers>=4.36.0",
    "jiwer>=3.0.0",
    "utmos",
    "librosa",
    "soundfile",
    "numpy",
    "pandas",
    "tabulate",
    "tqdm",
    "python-dotenv>=1.2.2",
    "datasets>=4.8.5",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
